# oberon

./: .gitignore  Cargo.toml  README.md
examples/: config.toml  package_metadata.toml
src/: cli.rs  config.rs  installer.rs  main.rs  metadata.rs  removeme.md
src/commands/: addrepo.rs  chooserepo.rs  install.rs  metadata.rs  mod.rs  remove.rs  sync.rs  update.rs
