[package]
name = "oberon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
flate2 = "1.0"
tar = "0.4"
log = "0.4"
env_logger = "0.10"
